@@ -177,4 +177,5 @@ text.ps application/postscript
 test.cmake text/x-cmake ox
 bluerect.mdi image/vnd.ms-modi
 Stallman_Richard_-_The_GNU_Manifesto.fb2 application/x-fictionbook+xml
-
+test.p7b application/x-pkcs7-certificates ox
+test.pkipath application/pkix-pkipath ox
